Added non tab styles and rtl

--- a/src/assets/styles/partials/_variables.scss
+++ b/src/assets/styles/partials/_variables.scss
@@ -17,7 +17,7 @@ $colors: (
   "noir": #513629,
   "cream": #FAF5ED,
   "light-cream": #FAF5ED66,
-
+  "pearl-bush": #eae1d3,
 
   "grey": #403f3d,
   "grey-dark": #282828,
