--- a/src/components/rendering/pdpTabs/pdpTabs.module.scss
+++ b/src/components/rendering/pdpTabs/pdpTabs.module.scss
@@ -167,7 +167,7 @@
   @include lg {
     gap: rem(36);
     padding: rem(36) rem(20);
-    max-width: rem(300);
+    max-width: 38.5%; //rem(300);
   }
 
   li{
@@ -217,10 +217,12 @@
 
   @include md {
     width: 70%;
+    padding-bottom: rem(30);
   }
 
   @include lg {
     width: 100%;
+    max-width: 61.5%;
   }
 }
 
