--- a/src/pages/book-an-appointment/stepTwo/index.module.scss
+++ b/src/pages/book-an-appointment/stepTwo/index.module.scss
@@ -4,6 +4,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  gap: rem(120);
 }
 
 .content {
@@ -32,20 +34,26 @@
     width: rem(20);
     height: rem(20);
     cursor: pointer;
-    border: 1px solid #847b72;
+    border: 2px solid #847b72;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-left: 1px solid #847b72;
   }
 
   .tick {
     display: none;
   }
 
-  .inputCheckbox:checked + .checkbox .tick {
-    display: block;
-  }
+  // .inputCheckbox {
+  //   display: none;
+  // }
 
+  .inputCheckbox:checked + .checkbox {
+    .tick {
+      display: block; // Show the tick when the checkbox is checked
+    }
+  }
   .brandName {
     color: var(--GreyShades-Mid-Grey, #787775);
     cursor: pointer;
@@ -61,7 +69,7 @@
 .suggestionContainer {
   display: flex;
   flex-direction: column;
-  gap: rem(16);
+  gap: rem(28);
 }
 
 .suggestionItems {
@@ -90,5 +98,56 @@
 
 .brandBtn {
   text-transform: capitalize;
-  margin-top: rem(28);
+}
+.selectBrandBtn {
+  width: rem(320);
+  text-transform: uppercase;
+  margin: auto;
+
+  button {
+    width: 100%;
+  }
+}
+
+// alphabeticalContainer
+.alphabeticalContainer {
+  max-width: rem(800);
+  display: flex;
+  flex-wrap: wrap;
+  gap: rem(32);
+  justify-content: space-between;
+  height: rem(392);
+  overflow-y: scroll;
+
+  &::-webkit-scrollbar {
+    width: rem(5);
+    height: rem(102);
+    cursor: pointer;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    height: rem(102);
+    cursor: pointer;
+    background: #d2cbc2; /* Custom background color */
+    border-radius: 2px; /* Border radius for the scrollbar */
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #d2cbc2; /* Optional: darker shade on hover */
+  }
+
+  .charContainer {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: rem(16);
+    .char {
+      @include heading_regular;
+      color: getColorHex("metallic");
+      font-size: rem(26);
+      font-weight: 500;
+      line-height: rem(36);
+      letter-spacing: rem(0.6);
+    }
+  }
 }
