updated scss to standard

--- a/src/components/rendering/Loader/loader.module.scss
+++ b/src/components/rendering/Loader/loader.module.scss
@@ -1,3 +1,6 @@
+@import "./../../../assets/styles/main.scss";
+
+
 .loaderOverlay {
     position: fixed;
     top: 0;
@@ -12,11 +15,11 @@
   }
   
   .loaderSpinner {
-    border: 4px solid rgba(0, 0, 0, 0.1);
-    border-top: 4px solid #3498db;
+    border: rem(4) solid rgba(0, 0, 0, 0.1);
+    border-top: 4px solid getColorHex("green-dark");
     border-radius: 50%;
-    width: 40px;
-    height: 40px;
+    width: rem(40);
+    height: rem(40);
     animation: spin 1s linear infinite;
   }
   
