--- a/src/components/module/categoryList/categoryList.module.scss
+++ b/src/components/module/categoryList/categoryList.module.scss
@@ -1,5 +1,4 @@
 @import "./../../../assets/styles/main.scss";
-
 .catogeryListContainer {
   padding: rem(60 0);
   text-align: center;
@@ -11,76 +10,58 @@
   }
 
   @include md {
-    gap: rem(15);
+    padding-top: rem(120);
   }
 
   .title {
     @include heading_regular;
     text-transform: uppercase;
-    text-align: center;
     color: getColorHex("midnight-brown");
+    width: rem(800);
+    margin: 0 auto;
   }
 
-  .swiperSlide {
-    position: relative;
-
-    .image {
-      width: 100%;
-      height: rem(299);
-      object-fit: contain;
-    }
-  }
-
-  .carousel {
-    width: 100%;
-    position: relative;
+  .containerGrid {
     display: flex;
-    align-items: center;
-    margin-left: rem(20);
-
-    @include lg {
-      width: 90%;
-      margin: 0 auto;
-    }
-  }
-
-  .categoryListItem {
-    height: rem(299);
-    position: relative;
-    @include lg {
-      height: rem(299);
-    }
-    .image {
-      border-radius: rem(16) 0 rem(16) 0;
-      width: 100%;
-      height: rem(299);
-      object-fit: cover;
-      position: relative;
-      z-index: -1;
-    }
-  }
-
-  .containerImg {
-    border-radius: rem(16) 0 rem(16) 0;
-  }
-
-  .titleContainer {
-    padding-top: rem(5);
-  }
-  .slideTitle {
-    @include heading_regular;
-    font-size: rem(14);
-    line-height: rem(20);
+    justify-content: center;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    padding: rem(18 0);
 
     @include md {
-      font-size: rem(16);
-      line-height: rem(20);
-      font-weight: 400;
-      letter-spacing: 0.4;
-      text-transform: uppercase;
+      padding: rem(42 0);
     }
   }
-  .ctaContainer {
-    padding-top: rem(15);
+
+  .categoryListCarousel {
+    width: 100%;
+    margin-left: rem(28);
+    margin-top: rem(24);
+    margin-bottom: rem(18);
+    @include md {
+      margin-bottom: rem(0);
+    }
+
+    .swiperSlide {
+      width: rem(200) !important;
+      margin-right: rem(20);
+    }
+  }
+
+  .containerGridItems {
+    display: flex;
+
+    @include md {
+      gap: rem(24);
+    }
+  }
+
+  .gridItem {
+    flex: 0 0 auto;
+    width: rem(200);
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
