--- a/src/pages/book-an-appointment/serviceCard/serviceCard.module.scss
+++ b/src/pages/book-an-appointment/serviceCard/serviceCard.module.scss
@@ -10,6 +10,7 @@
   width:100%;
   cursor: pointer;
   position: relative;
+  transition: all .3s ease-in-out;
 
   &:hover {
     border: rem(1) solid getColorHex("grey-mid");
