added book an appointment step1 and step2

--- a/src/assets/styles/partials/_variables.scss
+++ b/src/assets/styles/partials/_variables.scss
@@ -21,7 +21,9 @@ $colors: (
 
   "grey": #403f3d,
   "grey-dark": #282828,
+  "grey-brown": #847B72,
   "grey-mid": #787775,
+  "grey-high": #c7c9c6,
   "grey-light": #e9e8e3,
   "grey-light-2": #f8f8f8,
   "grey-light-3": #e9e6e3,
@@ -44,6 +46,7 @@ $colors: (
   "black-dark": #000000,
   "black-light": #4B4B4B,
   "yellow": #ffc72c,
+
 
   "orange": #faab51,
   "pink": #e7519d,
