--- a/src/components/rendering/twoColumnArticleBlock/twoColumnArticleBlock.module.scss
+++ b/src/components/rendering/twoColumnArticleBlock/twoColumnArticleBlock.module.scss
@@ -60,6 +60,7 @@
   margin: 0;
   @include heading_regular;
   text-align: center;
+  text-transform: uppercase;
 
   [dir="rtl"] & {
     text-align: right;
