--- a/src/components/module/bookAnAppointment/stepFour/index.module.scss
+++ b/src/components/module/bookAnAppointment/stepFour/index.module.scss
@@ -1,86 +1,285 @@
+@import "./../../../../assets/styles/main.scss";
+
 .dateSelector {
-    border: 2px solid #a855f7;
-    padding: 20px;
-    border-radius: 10px;
-    max-width: 600px;
-    margin: auto;
-  }
-  
-  .h2 {
+  // border: 2px solid #a855f7;
+  // padding: 20px;
+  // border-radius: 10px;
+  max-width: 800px;
+  margin: auto;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.h2 {
+  @include heading_regular;
+  color: var(--Primary-Black, #000);
+  text-align: center;
+
+  /* Desktop/Headings/H4 */
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 36px; /* 138.462% */
+  letter-spacing: 0.6px;
+  margin-bottom: rem(20);
+}
+
+.monthNav {
+  display: flex;
+  // justify-content: space-between;
+  align-items: center;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+}
+
+.button {
+  background: none;
+  cursor: pointer;
+  color: #000;
+  min-width: rem(28);
+  height: rem(28);
+  padding: 0;
+}
+
+.arrowLeft {
+  transform: rotate(180deg);
+}
+
+.dateContainer {
+  overflow-x: auto; /* Enable horizontal scrolling */
+  white-space: nowrap; /* Prevent items from wrapping */
+  overflow-x: hidden;
+}
+
+.dates {
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+  width: max-content; /* Ensure the flex container doesn't shrink */
+}
+
+.dateItem,
+.timeItem {
+  min-width: 60px; /* Ensure minimum size for horizontal scrolling */
+  height: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #e0e0e0;
+  cursor: pointer;
+  transition: 0.2s;
+  display: flex;
+  width: 96px;
+  height: 104px;
+  padding: 12px 8px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: var(--Primary-Black, #000);
+
+  .day {
     text-align: center;
-    margin-bottom: 10px;
-    font-size: 18px;
+    @include heading_regular;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 14px; /* 140% */
+    letter-spacing: 0.2px;
+    text-transform: uppercase;
   }
-  
-  .monthNav {
+
+  .date {
+    text-align: center;
+
+    @include heading_regular;
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 32px; /* 123.077% */
+    letter-spacing: 0.6px;
+    text-transform: uppercase;
+  }
+}
+.timeItem {
+  min-width: 60px; /* Ensure minimum size for horizontal scrolling */
+  height: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #e0e0e0;
+  cursor: pointer;
+  transition: 0.2s;
+  display: flex;
+  width: 96px;
+  height: 104px;
+  padding: 12px 8px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: var(--Primary-Black, #000);
+
+  width: 96px;
+  height: 50px;
+  padding: 12px 8px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: var(--Primary-Black, #000);
+  text-align: center;
+
+  @include heading_regular;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px; /* 140% */
+  letter-spacing: 0.6px;
+  text-transform: uppercase;
+}
+
+.dateItem:hover,
+.timeItem:hover {
+  border-color: #7e6952;
+}
+
+.selected {
+  border: 0px solid var(--Primary-Noir, #513629);
+  background: var(--Secondary-Chocolate-brown, #7e6952);
+  color: white;
+}
+
+.selectedTime {
+  border: 0px solid var(--Primary-Noir, #513629);
+  background: var(--Secondary-Chocolate-brown, #7e6952);
+  color: white;
+}
+
+.disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
+
+.timeContainer {
+  overflow-x: auto; /* Enable horizontal scrolling for time slots */
+  white-space: nowrap; /* Prevent wrapping */
+  margin-top: 20px;
+  // overflow-x: hidden;
+  overflow-x: scroll; /* Allow horizontal scrolling */
+  scrollbar-width: none; /* Hide scrollbar in Firefox */
+  -ms-overflow-style: none;
+}
+
+.times {
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+  width: max-content; /* Ensure the flex container doesn't shrink */
+}
+
+// .dateContainer::-webkit-scrollbar, .timeContainer::-webkit-scrollbar {
+//   display: none; /* Hide scrollbar in webkit browsers */
+// }
+
+.preferenceContainer {
+  background-color: #fff;
+  margin-top: rem(60);
+}
+
+.heading {
+  @include heading_regular;
+  font-size: 26px;
+  font-weight: 500;
+  line-height: 36px;
+  letter-spacing: 0.6px;
+  margin-bottom: rem(24);
+  color: var(--Primary-Black, #000);
+}
+
+.options {
+  display: flex;
+  gap: 15px; /* Space between options */
+}
+
+.customRadio {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  position: relative;
+
+  input {
+    display: none; /* Hide the default radio button */
+  }
+
+  .radioCircle {
+    width: 20px; /* Customize the size */
+    height: 20px;
+    border-radius: 50%;
+    border: 1px solid #513629; /* Border color */
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    margin-bottom: 15px;
-  }
-  
-  .button {
-    background: none;
-    border: 1px solid #a855f7;
-    padding: 5px;
-    cursor: pointer;
-    border-radius: 5px;
-  }
-  
-  .dateContainer {
-    overflow-x: auto; /* Enable horizontal scrolling */
-    white-space: nowrap; /* Prevent items from wrapping */
-  }
-  
-  .dates {
-    display: flex;
-    justify-content: flex-start;
-    gap: 10px;
-    width: max-content; /* Ensure the flex container doesn't shrink */
-  }
-  
-  .dateItem, .timeItem {
-    min-width: 60px; /* Ensure minimum size for horizontal scrolling */
-    height: 60px;
-    display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
-    border: 2px solid #e0e0e0;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: 0.2s;
+    margin-right: 10px; /* Space between circle and label text */
+    position: relative;
+    background: white; /* Background color for the circle */
+    transition: background 0.2s, border 0.2s;
+
+    &::after {
+      content: "";
+      width: 6px; /* Inner circle size */
+      height: 6px;
+      border-radius: 50%;
+      background: #513629; /* Inner circle color */
+      position: absolute;
+      transform: scale(0); /* Start hidden */
+      transition: transform 0.2s;
+    }
   }
-  
-  .dateItem:hover, .timeItem:hover {
-    border-color: #a855f7;
+
+  input:checked + .radioCircle::after {
+    transform: scale(1); /* Show the inner circle on check */
   }
-  
-  .selected {
-    border-color: #a855f7;
-    background-color: #f3e8ff;
-  }
-  
-  .selectedTime {
-    border-color: #4ade80; /* Green border for selected time */
-    background-color: #d1fae5; /* Light green background for selected time */
-  }
-  
-  .disabled {
-    opacity: 0.5;
-    pointer-events: none;
-  }
-  
-  .timeContainer {
-    overflow-x: auto; /* Enable horizontal scrolling for time slots */
-    white-space: nowrap; /* Prevent wrapping */
-    margin-top: 20px;
-  }
-  
-  .times {
-    display: flex;
-    justify-content: flex-start;
-    gap: 10px;
-    width: max-content; /* Ensure the flex container doesn't shrink */
-  }
-  
+}
+
+// Selected and Not Selected Styles
+.selected {
+  border-color: var(--Primary-Black, #000); /* Selected border color */
+}
+
+.notSelected {
+  border-color: var(--GreyShades-Mid-Grey, #787775); /* Not selected border color */
+}
+
+.selectedText {
+  color: var(--Primary-Black, #000); /* Selected text color */
+  text-align: center;
+
+  /* Desktop/BodyCopy/Small */
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px; /* 157.143% */
+  letter-spacing: 0.2px;
+}
+
+.notSelectedText {
+  color: var(--GreyShades-Mid-Grey, #787775); /* Not selected text color */
+  text-align: center;
+
+  /* Desktop/BodyCopy/Small */
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px; /* 157.143% */
+  letter-spacing: 0.2px;
+}
+
+
+.tabNavigation {
+  width: 100%;
+  margin-top: rem(60);
+}
