--- a/src/assets/styles/partials/_variables.scss
+++ b/src/assets/styles/partials/_variables.scss
@@ -51,6 +51,7 @@ $colors: (
   "orange": #faab51,
   "pink": #e7519d,
   "red": #e61933,
+  "dark-red": #9B0009,
   "red-dark": #6a2102,
   "maroon": #401c32,
   "dark-purple": #1d2995,
