--- a/src/components/module/bookAnAppointment/auth/auth.module.scss
+++ b/src/components/module/bookAnAppointment/auth/auth.module.scss
@@ -13,7 +13,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  align-items: center
+  align-items: center;
 }
 
 .rightSide {
@@ -21,10 +21,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
+  gap: rem(62);
 }
 
 .signin {
-  padding-top: rem(60);
+  padding-top: rem(32);
   width: 100%;
 }
 
@@ -36,10 +37,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: rem(36);
 }
 .submitBtn {
-  margin-top: rem(36);
- width: rem(252);
+  width: rem(252);
 }
 
 .formGroup {
@@ -58,8 +59,7 @@
   input,
   select {
     border: none;
-    border-bottom: 1px solid var(--GreyShades-Lighter-Grey, #e9e8e3);
-    // padding: 10px 0;
+    border-bottom: 1px solid getColorHex("grey-light");
     font-size: 16px;
     width: 100%;
     transition: border-color 0.3s;
@@ -68,7 +68,7 @@
 
     &:focus {
       outline: none;
-      border-bottom-color: #000;
+      border-bottom-color: getColorHex("black");
     }
   }
 
@@ -110,14 +110,17 @@
   width: 100%;
 
   select {
-    border-bottom: 2px solid #ccc;
-    padding: 10px;
+    border-bottom: rem(1) solid getColorHex("grey-light");
     background-color: transparent;
-    width: 80px;
+    width: rem(64);
+    color: getColorHex('grey');
+    font-size: rem(16);
+    line-height: rem(26);
+    letter-spacing:rem(0.2);
 
     &:focus {
       outline: none;
-      border-bottom-color: #000;
+      border-bottom-color: getColorHex("black");
     }
   }
 }
@@ -126,7 +129,7 @@
   text-align: center;
   font-size: 14px;
   color: #787775;
-  margin-bottom: 20px;
+  margin-bottom: -20px;
 
   border-radius: 16px 0px;
   background: var(--GreyShades-Lighter-Grey, #e9e8e3);
