--- a/src/components/module/bookAnAppointment/auth/inputField/inputField.module.scss
+++ b/src/components/module/bookAnAppointment/auth/inputField/inputField.module.scss
@@ -1,54 +1,61 @@
+@import "./../../../../../assets/styles/main.scss";
+
 .inputGroup {
-    position: relative;
-    display: flex;
-    flex-direction: column-reverse;
-    height: 48px;
+  position: relative;
+  display: flex;
+  flex-direction: column-reverse;
+  height: rem(48);
+  width: 100%;
+
+  input,
+  select {
+    border: none;
+    border-bottom: rem(1) solid getColorHex("grey-light");
+    font-size: 16px;
     width: 100%;
-  
-    input,
-    select {
-      border: none;
-      border-bottom: 1px solid var(--GreyShades-Lighter-Grey, #e9e8e3);
-      font-size: 16px;
-      width: 100%;
-      transition: border-color 0.3s;
-      background-color: transparent;
-      height: 100%;
-  
-      &:focus {
-        outline: none;
-        border-bottom-color: #000;
-      }
-    }
-  
-    label {
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      font-size: 16px;
-      color: #787775;
-      pointer-events: none;
-      transition: all 0.3s ease;
-      transform-origin: left bottom;
-      transform: translateY(0);
-      top: 50%;
-      transform: translateY(-50%);
-    }
-  
-    input:focus + label,
-    input:not(:placeholder-shown) + label {
-      transform: translateY(-130%) scale(0.8);
-      color: #000;
-    }
-  
-    .inputError {
-      border-bottom-color: red;
-    }
-  
-    .errorMessage {
-      color: red;
-      font-size: 12px;
-      margin-top: 5px;
+    transition: border-color 0.3s;
+    background-color: transparent;
+    height: 100%;
+
+    &:focus {
+      outline: none;
+      border-bottom-color: getColorHex("black");
     }
   }
-  
+
+  label {
+    @include heading_regular;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    font-size: rem(16);
+    pointer-events: none;
+    transition: all 0.3s ease;
+    transform-origin: left bottom;
+    transform: translateY(0);
+    top: 50%;
+    transform: translateY(-50%);
+    color: getColorHex("grey");
+    line-height: rem(26);
+    letter-spacing: rem(0.2);
+  }
+
+  input:focus + label,
+  input:not(:placeholder-shown) + label {
+    transform: translateY(-130%) scale(0.8);
+    color: getColorHex("black");
+  }
+
+  .inputError {
+    border-bottom-color: getColorHex("dark-red");
+  }
+
+  .errorMessage {
+    @include heading_regular;
+    color: getColorHex("dark-red");
+    margin-top: rem(8);
+    font-size: rem(10);
+    line-height: rem(14);
+    letter-spacing: rem(0.2);
+  }
+}
