--- a/src/components/module/bookAnAppointment/opt/otp.module.scss
+++ b/src/components/module/bookAnAppointment/opt/otp.module.scss
@@ -1,11 +1,26 @@
+@import "./../../../../assets/styles/main.scss";
+
 .otpContainer {
   text-align: center;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: rem(36);
 
   h2 {
+    @include heading_regular;
     font-size: 24px;
     font-weight: 500;
     margin-bottom: 10px;
+
+    color: var(--Secondary-Dark-Green, #464f4a);
+    text-align: center;
+
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 44px; /* 137.5% */
+    letter-spacing: 0.6px;
   }
 
   p {
@@ -17,16 +32,17 @@
   .otpInputs {
     display: flex;
     justify-content: center;
-    gap: 10px;
+    gap: 20px;
     margin-bottom: 20px;
 
     input {
-      width: 40px;
-      height: 50px;
+      width: 117px;
+      height: 48px;
       font-size: 24px;
       text-align: center;
-      border: 1px solid #ccc;
-      border-radius: 4px;
+      border: none;
+      border-bottom: 1px solid #ccc;
+      // border-radius: 4px;
       outline: none;
       transition: border-color 0.3s ease-in-out;
 
@@ -38,10 +54,33 @@
 
   .resendSection {
     margin-bottom: 20px;
+    text-align: left;
 
     .timer {
       font-size: 14px;
       color: #888;
+
+      color: var(--GreyShades-Grey, #403f3d);
+
+      /* Desktop/BodyCopy/Default */
+      @include heading_regular;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 26px; /* 162.5% */
+      letter-spacing: 0.2px;
+
+      .optTimer {
+        @include heading_regular;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 18px; /* 128.571% */
+        letter-spacing: 1px;
+        text-transform: capitalize;
+        cursor: pointer;
+        border-bottom: 1px solid var(--Secondary-Dark-Green, #464f4a);
+      }
     }
 
     .resendBtn {
@@ -59,17 +98,10 @@
   }
 
   .submitBtn {
-    background-color: #b08c72;
-    color: #fff;
-    padding: 10px 20px;
-    font-size: 16px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
     transition: background-color 0.3s ease;
-
-    &:hover {
-      background-color: #a67e5b;
-    }
   }
+}
+
+.signinBtn {
+  width: rem(320);
 }
