added switch buttons

--- a/src/components/module/bookAnAppointment/auth/inputField/inputField.module.scss
+++ b/src/components/module/bookAnAppointment/auth/inputField/inputField.module.scss
@@ -1,10 +1,12 @@
 @import "./../../../../../assets/styles/main.scss";
 
-.inputGroup {
+
+.inputGroup,
+.selectGroup {
   position: relative;
   display: flex;
   flex-direction: column-reverse;
-  height: rem(48);
+  height: rem(46);
   width: 100%;
 
   input,
@@ -22,6 +24,34 @@
       border-bottom-color: getColorHex("black");
     }
   }
+
+  select {
+    width: rem(61);
+    margin-left: -3px;
+    // appearance: none;
+    // -webkit-appearance: none;
+    // -moz-appearance: none;
+
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid getColorHex("grey-light");
+    font-size: 16px;
+    color: getColorHex("grey");
+    height: 100%;
+    cursor: pointer;
+    transition: border-color 0.3s;
+    box-sizing: border-box; /* Include padding and border in width calculation */
+
+    &:focus {
+        outline: none;
+        border-bottom-color: getColorHex("black");
+    }
+
+    /* Hides the dropdown arrow for Internet Explorer */
+    select::-ms-expand {
+        display: none;
+    }
+}
 
   label {
     @include heading_regular;
@@ -42,7 +72,7 @@
 
   input:focus + label,
   input:not(:placeholder-shown) + label {
-    transform: translateY(-130%) scale(0.8);
+    transform: translateY(-180%) scale(0.8);
     color: getColorHex("black");
   }
 
@@ -59,3 +89,16 @@
     letter-spacing: rem(0.2);
   }
 }
+
+.selectGroup {
+  width: rem(61);
+  label {
+    transform: translateY(-180%) scale(0.8);
+
+  }
+
+  option {
+    color: getColorHex("grey");
+  }
+}
+
