--- a/src/components/module/bookAnAppointment/auth/register/register.module.scss
+++ b/src/components/module/bookAnAppointment/auth/register/register.module.scss
@@ -1,4 +1,9 @@
-@import './../../../../../assets/styles/main.scss';
+@import "./../../../../../assets/styles/main.scss";
+
+.optionSelector {
+  display: flex;
+  gap: rem(12);
+}
 
 .form {
   max-width: rem(500);
@@ -94,13 +99,39 @@
   display: flex;
   flex-direction: column;
   gap: rem(44);
-  
 }
 .container {
   width: 100%;
-
 }
+
 .doubleForm {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: rem(40);
+}
+
+.slidingSwitch {
   display: flex;
-  gap: rem(20);
+  align-items: center;
+  gap: rem(14);
+}
+.switchLabel {
+  color: var(--GreyShades-Grey, #403f3d);
+
+  /* Desktop/BodyCopy/XSmall-Default */
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px; /* 140% */
+  letter-spacing: 0.2px;
+}
+
+.submitBtnContainer {
+  width: 100%;
+  margin: rem(40 0);
+  display: flex;
+  justify-content: center;
+}
+.submitBtn {
+  width: rem(264);
 }
